fixing linking for web hosting

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <title>HTML, CSS and JavaScript demo</title>
-<link type="text/css" rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 <!-- Start your code here -->
@@ -13,6 +12,6 @@
   <p id = "in_lucky_ball"></p>
 <p id = "payout"></p>
 <!-- End your code here -->
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
